--- a/src/pages/HomeView/HomeView.module.scss
+++ b/src/pages/HomeView/HomeView.module.scss
@@ -16,4 +16,9 @@
   position: relative;
   display: flex;
   justify-content: space-between;
+  &.loading {
+    align-items: center;
+    justify-content: center;
+    padding: 2em 0;
+  }
 }
