--- a/src/components/CharacterGrid/CharacterGrid.module.scss
+++ b/src/components/CharacterGrid/CharacterGrid.module.scss
@@ -1,3 +1,5 @@
+@use '../../styles/abstracts/mixin' as *;
+
 .root {
   width: 60%;
 }
@@ -12,4 +14,13 @@
   display: grid;
   grid-gap: 1em;
   grid-template-columns: repeat(8, 1fr);
+  @include responsive('md', true) {
+    grid-template-columns: repeat(6, 1fr);
+  }
+  @include responsive('sm', true) {
+    grid-template-columns: repeat(4, 1fr);
+  }
+  @include responsive('xsm', true) {
+    grid-template-columns: repeat(3, 1fr);
+  }
 }
